--- a/src/components/Default/styles.module.scss
+++ b/src/components/Default/styles.module.scss
@@ -1,5 +1,28 @@
 // div
 
 .container {
-    
+    width: 100%;
+    background-color: #f8f8f8;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    gap: 20px;
+    padding: 20px;
+
+    svg {
+        width: 100px;
+        height: 100px;
+        color: green;
+    }
+}
+
+.title {
+    text-align: center;
+}
+
+.info {
+    font-size: 18px;
+    text-align: center;
+    max-width: 500px;
 }
