--- a/src/components/Login/styles.module.scss
+++ b/src/components/Login/styles.module.scss
@@ -1,13 +1,67 @@
+/* styles.module.scss */
+
 .container {
     display: flex;
-    height: 100vh;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
+    height: 100vh;
+    background-color: #dedddd;
+}
+
+.content {
+    background-color: #fff;
+    border-radius: 8px;
+    box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.1);
+    padding: 50px;
+    text-align: center;
+    max-width: 400px;
+    svg {
+        width: 200px;
+        height: 200px;
+        color: green;
+    }
+}
+
+
+
+.title {
+    font-size: 24px;
+    font-weight: bold;
+    margin-bottom: 20px;
+}
+
+.subtitle {
+    font-size: 16px;
+    color: #666;
+    margin-bottom: 30px;
 }
 
 .button {
-    outline: none;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #007bff;
+    color: #fff;
+    border: none;
+    border-radius: 4px;
     font-size: 18px;
-    padding: 14px 18px;
+    padding: 12px 24px;
     cursor: pointer;
+    transition: background-color 0.3s, transform 0.3s;
+
+    svg {
+        margin: 20px;;
+        width: 40px;
+        height: 40px;
+    }
+}
+
+.button:hover {
+    background-color: #0056b3;
+    transform: scale(1.05);
+}
+
+.button:focus {
+    outline: none;
 }
