--- a/src/components/ChatFooter/styles.module.scss
+++ b/src/components/ChatFooter/styles.module.scss
@@ -16,6 +16,7 @@
     }
 
 }
+
 //form
 .form {
     display: flex;
@@ -33,4 +34,54 @@
     border-radius: 5px;
     width: 100%;
     box-shadow: inset 0 0 1px 1px #0003;
+}
+
+//button
+
+.button {
+    background-color: transparent;
+    border: none;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 1.5rem;
+    color: #333;
+    margin-right: 5px;
+    margin-left: 5px;
+
+    &:hover {
+        color: #007bff;
+        /* Cor ao passar o mouse sobre o botão */
+    }
+
+    &:focus {
+        outline: none;
+        /* Remove a borda de foco padrão */
+    }
+}
+
+// button de code text
+.codeButton {
+    background-color: transparent;
+    border: none;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 1.5rem;
+    color: #333;
+    /* Cor do ícone do botão */
+    transition: color 0.3s ease;
+    /* Adiciona uma transição suave para a mudança de cor */
+
+    &:hover {
+        color: #007bff;
+        /* Cor ao passar o mouse sobre o botão */
+    }
+
+    &:focus {
+        outline: none;
+        /* Remove a borda de foco padrão */
+    }
 }
